--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CarboNex</tittle>
    </head>
 <body>
   <div class="container">
     <div class="title">CarboNex</div>
     <div class="content">
-      <form action="file:///C:/Users/u724619/OneDrive%20-%20Finastra/Desktop/carbonx/table.html">
+      <form action="https://yash-7991.github.io/CarboNex/table.html">
         <div class="user-details">
           <div class="input-box">
             <span class="details">Principal</span>
