--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <title>CarboNex</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CarboNex</tittle>
    </head>
 <body>
   <div class="container">
